fix for challenge-card alignment on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -31,7 +31,7 @@ a {
 
 .container {
   max-width: 1280px;
-  margin-inline: auto;
+  margin: auto;
 }
 
 .btn {
@@ -355,10 +355,10 @@ a {
 
 .challenge-cards-container {
   display: flex;
-  justify-content: safe center;
   gap: 2.5em;
   padding: 2em 3em;
-  overflow: scroll;
+  overflow-x: scroll;
+  scrollbar-width: none;
 }
 
 .challenge-card {
