--- a/style/misc.scss
+++ b/style/misc.scss
@@ -1,6 +1,6 @@
 .container {
     max-width: 1280px;
-    margin-inline: auto;
+    margin: auto;
 }
 
 .btn {
